--- a/src/Pages/HowToContribute/ResourceNWC/ResourceNWC.css
+++ b/src/Pages/HowToContribute/ResourceNWC/ResourceNWC.css
@@ -90,7 +90,33 @@ ARCHIVISTS ICONS
     margin-left: 300rem;
 }
 
-.iconContainer p{
+.iconContainer_nwc{
+    font-family:var(--fontBabasNeue);
+    text-align:center;
+    float:left;
+    padding: 30rem;
+    margin-left: -110rem;
+    margin-right: 80rem;
+}
+
+.iconContainer_nwc_bottom {
+    font-family:var(--fontBabasNeue);
+    text-align:center;
+    float:left;
+    padding: 30rem;
+    margin-left: -160rem;
+    margin-right: 150rem;
+}
+
+.iconContainer_nwc p{
+    white-space: pre-line;
+    display: block;
+    color: #142F45;
+    margin-top: 50rem;
+    font-size: 30rem;
+}
+
+.iconContainer_nwc_bottom p{
     white-space: pre-line;
     display: block;
     color: #142F45;
