--- a/src/Pages/HowToContribute/ResourceResearchers/ResourceResearchers.css
+++ b/src/Pages/HowToContribute/ResourceResearchers/ResourceResearchers.css
@@ -91,6 +91,12 @@ RESEARCHERS ICONS
     display: flex;
     justify-content: center;
     margin-top: 100rem;
+    margin-bottom: 100rem;
+}
+
+.resourceResearchersIcons img{
+    max-width:100%;
+    
 }
 
 .iconContainer{
